--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
                         window.chart.render();
                         document.getElementById("fps").innerText = event.data.frames
                         break;
+                    case "toggle":
+                        document.getElementById("wrapper").style.display = document.getElementById("wrapper").style.display == "none" ? "" : "none";
+                        break;
                     default:
                         break;
                 }
             });
         </script>
     </head>
-    <body >
-        <div id="chartContainer" style="width: 25%; height: 25%; position: absolute; bottom: 10px; right: 10px;"></div>
-        <span id="fps" style="position: absolute; bottom: calc(25% - 30px); right: 20px; font-size: 24; font-weight: bold;"></span>
+    <body style="overflow: hidden">
+        <div id="wrapper">
+            <div id="chartContainer" style="width: 25%; height: 25%; position: absolute; bottom: 5vh; right: 5vw;"></div>
+            <span id="fps" style="position: absolute; bottom: 25vh; right: 6vw; font-size: 24pt; font-weight: bold;"></span>
+        </div>
     </body>
 </html>
